# cpp_starter

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md  cpp_starter.code-workspace
apps/: CMakeLists.txt  main.cpp
include/foo/: bar.hpp  foo.hpp
src/: CMakeLists.txt
src/foo/: CMakeLists.txt  bar.cpp  foo.cpp
